Title overflow, translate toggle, Z-Scores translation fixed

--- a/style/navStyle.css
+++ b/style/navStyle.css
@@ -1,5 +1,5 @@
-#navbar{
-  padding: 10px;
+#nav{
+  padding-top: 5px;
   width: auto;
   display: flex;
   justify-content: space-between;
@@ -14,7 +14,6 @@
   margin-top: 120px;
 }
 
-
 .navButton{
   display: inline-block;
   height: 30px;
@@ -24,7 +23,7 @@
 }
 
 #buttonbox{
-  width: 60px;
+  width: 80px;
   text-align: center;
 }
 
@@ -72,6 +71,7 @@
   display: flex;
   width: 60px;
   height: 30px;
+  margin-bottom: 5px;
 }
 
 /* Hide the default checkbox */
@@ -117,4 +117,9 @@
 /* Move the knob when checked */
 .slider input:checked + .slider-button::before {
   transform: translateX(30px); /* Move the knob to the right */
+}
+
+#title{
+  width: 100%;
+  word-wrap: break-word;
 }
